# claude-resume

./: Cargo.toml  LICENSE  README.md  install.sh
.claude-plugin/: plugin.json
.github/workflows/: release.yml
scripts/: mock-data.sql  record-demo.sh  record-demo.tape
skills/search/: SKILL.md
src/: embedder.rs  index.rs  install.rs  main.rs  parser.rs  tui.rs
